After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788719 - ev-application: Use standard GPL2+ license type instead of custom text
ev-application: Use standard GPL2+ license type instead of custom text
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-09 14:12 UTC by Stefano Facchini
Modified: 2017-11-18 08:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ev-application: Use standard GPL2+ license type instead of custom text (2.99 KB, patch)
2017-10-09 14:12 UTC, Stefano Facchini
committed Details | Review

Description Stefano Facchini 2017-10-09 14:12:47 UTC
see patch
Comment 1 Stefano Facchini 2017-10-09 14:12:51 UTC
Created attachment 361189 [details] [review]
ev-application: Use standard GPL2+ license type instead of custom text
Comment 2 Carlos Garcia Campos 2017-11-18 08:01:40 UTC
Comment on attachment 361189 [details] [review]
ev-application: Use standard GPL2+ license type instead of custom text

Pushed, thanks!