ev-application: Use standard GPL2+ license type instead of custom text

https://bugzilla.gnome.org/show_bug.cgi?id=788719