shell/ev-application.c
@@ -993,20 +993,6 @@ app_about_cb (GSimpleAction *action,
                 "Tiffany Antpolski <tiffany.antopolski@gmail.com>",
                 NULL
         };
-        const char *license[] = {
-                N_("Evince is free software; you can redistribute it and/or modify "
-                   "it under the terms of the GNU General Public License as published by "
-                   "the Free Software Foundation; either version 2 of the License, or "
-                   "(at your option) any later version.\n"),
-                N_("Evince is distributed in the hope that it will be useful, "
-                   "but WITHOUT ANY WARRANTY; without even the implied warranty of "
-                   "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the "
-                   "GNU General Public License for more details.\n"),
-                N_("You should have received a copy of the GNU General Public License "
-                   "along with Evince; if not, write to the Free Software Foundation, Inc., "
-                   "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA\n")
-        };
-        char *license_trans;
 #ifdef ENABLE_NLS
         const char **p;
 
@@ -1017,16 +1003,11 @@ app_about_cb (GSimpleAction *action,
                 *p = _(*p);
 #endif
 
-        license_trans = g_strconcat (_(license[0]), "\n",
-                                     _(license[1]), "\n",
-                                     _(license[2]), "\n",
-                                     NULL);
-
         gtk_show_about_dialog (gtk_application_get_active_window (GTK_APPLICATION (application)),
                                "name", _("Evince"),
                                "version", VERSION,
                                "copyright", _("© 1996–2017 The Evince authors"),
-                               "license", license_trans,
+                               "license", GTK_LICENSE_GPL_2_0,
                                "website", "https://wiki.gnome.org/Apps/Evince",
                                "comments", _("Document Viewer"),
                                "authors", authors,
@@ -1035,8 +1016,6 @@ app_about_cb (GSimpleAction *action,
                                "logo-icon-name", "evince",
                                "wrap-license", TRUE,
                                NULL);
-
-        g_free (license_trans);
 }
 
 static void
